# kernel

./: .gitignore  CMakeLists.txt
generic/: CMakeLists.txt  util.c  util.cpp
generic/include/kernel/: UniquePtr.hpp  allocator.hpp  avl_tree.h  avl_tree.hpp  avl_tree_node.hpp  bootdata.h  debug.h  list.h  list.hpp  list_node.hpp  multilang.h  node.h  node.hpp  util.h  util.hpp
kernel/: CMakeLists.txt  main.cpp
kstd/: CMakeLists.txt  stdlib.c
kstd/include/: btstdbeg.h  btstdend.h  cstdlib  cstring  stdlib.h  string.h
kstd/include/kstd/: btstdbeg.h  btstdend.h  stdlib_impl.h
ldscripts/: CMakeLists.txt  x86_64.ld
platform/: CMakeLists.txt
platform/x86_64/: CMakeLists.txt  alloc.c  alloc.cpp  alloc.h  alloc.s  crti.s  debug.cpp  exit.c  exit.cpp  init.c  init.cpp  init.s  interrupts.c  interrupts.cpp  interrupts.h  interrupts.s  memcmp.s  memcpymove.s  memset.s  processor.c  processor.h  segment.c  segment.cpp  segment.h  strchr.s  strcmp.s  strlen.s
